--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,13 @@
     color-scheme: light dark;
 
     --color-background: light-dark(oklch(98% 0.02 260), oklch(20% 0 0));
-    --color-primary: light-dark(oklch(20% 0.05 260), oklch(1 0 0));
+    --color-primary: light-dark(oklch(20% 0.05 260), oklch(100% 0 0));
     --color-secondary: light-dark(oklch(80% 0.05 260), oklch(30% 0 0));
     --color-accent: light-dark(oklch(70% 0.2 145), oklch(70% 0.2 145));
     --color-hover: light-dark(oklch(90% 0.05 260), oklch(30% 0.05 260));
-    --color-border: light-dark(oklch(0.85 0.01 263.53), #ffffff2e);
+    --color-border: light-dark(oklch(85% 0.01 263.53), oklch(100% 0 0 / 18%));
     --color-white: light-dark(oklch(100% 0 0), oklch(10% 0 0));
-    --color-shadow: light-dark(oklch(0.1 0 0 / 0.10), oklch(1 0 0 / 0.10));
+    --color-shadow: light-dark(oklch(10% 0 0 / 10%), oklch(100% 0 0 / 10%));
 
     --invert: invert(1);
     --easeInOutBack: cubic-bezier(0.68, -0.6, 0.32, 1.6);
@@ -27,6 +27,7 @@ body {
     scroll-behavior: auto !important;
 }
 
+/* Utility Classes */
 .center {
     display: flex;
     justify-content: center;
@@ -34,41 +35,48 @@ body {
     width: 100%;
 }
 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
+/* Body and Layout */
 body {
     padding-top: 2rem;
 }
 
+.space-holder {
+    height: 5rem;
+    width: 100%;
+}
+
+/* Video Styling */
 video {
     width: 100vw;
     max-width: 600px;
     border: 1px solid var(--color-border);
-    box-shadow: 0 2px 10px 0 var(--shadow-color-fewer);
-
+    box-shadow: 0 2px 10px 0 var(--color-shadow);
     border-radius: 17px;
     margin: 0 auto;
-
     pointer-events: none;
 }
 
+/* Table Styling */
 table {
     width: 95%;
     max-width: 300px;
-    margin: 0 auto;
+    margin: 0 auto 3rem;
     border-collapse: collapse;
-    border-spacing: 0;
-
     font-size: 1.5rem;
-
-    margin-bottom: 3rem;
 
     td {
         border-bottom: 1px solid var(--color-border);
         border-right: 1px solid var(--color-border);
         text-align: center;
-    }
 
-    td:last-child {
-        border-right: none;
+        &:last-child {
+            border-right: none;
+        }
     }
 
     tr:last-child td {
@@ -82,24 +90,13 @@ table {
     }
 }
 
-.flex-column {
-    display: flex;
-    flex-direction: column;
-}
-
-.space-holder {
-    height: 5rem;
-    width: 100%;
-}
-
+/* Input Group Styling */
 .input-group {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    gap: .5rem;
+    gap: 0.5rem;
     margin: 1rem 0;
-
-
 
     span {
         font-size: 2rem;
